Build: Rename package to @mgol/jquery-exports-test-do-not-use-v7

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jquery",
+  "name": "@mgol/jquery-exports-test-do-not-use-v7",
   "title": "jQuery",
   "description": "JavaScript library for DOM operations",
   "version": "4.0.0",
