--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "jquery",
+  "name": "@mgol/jquery-exports-test-do-not-use-v7",
   "main": "dist/jquery.js",
   "license": "MIT",
   "ignore": [
